--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                      <div class="home-data">
                          <h1 class="home__title">Hi, I'm Meharaz</h1>
                          <h3 class="home__subtitle">Frontend developer</h3>
-                         <p class="home__description">High level experience in web design and development knowledgr, prodycing quality work.</p>
+                         <p class="home__description">High level experience in web design and development knowledge, producing quality work.</p>
                          <a href="#contact" class="button button--flex">
                             Contact Me <i class="uil uil-message button__icon"></i>
                          </a>
